--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -11,7 +11,7 @@
   <entry key="xr:Buyer_identifier" id="BT-46">Identifier</entry>
   <entry key="xr:Buyer_identifier/@scheme_identifier" id="BT-46">Scheme identifier</entry>
   <entry key="xr:Buyer_contact_point" id="BT-56">Contact point</entry>
-  <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Contact point phone</entry>
+  <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Contact point phone</entry> <!-- Phone -->
   <entry key="xr:Buyer_contact_email_address" id="BT-58">Contact point email</entry> <!-- E-Mail address -->
   <entry key="xr:Seller_name" id="BT-27">Company name</entry>
   <entry key="xr:Seller_address_line_1" id="BT-35">Address line 1</entry>
@@ -24,14 +24,14 @@
   <entry key="xr:Seller_identifier" id="BT-29">Identifier</entry>
   <entry key="xr:Seller_identifier/@scheme_identifier" id="BT-29">Scheme identifier</entry>
   <entry key="xr:Seller_contact_point" id="BT-41">Contact point</entry>
-  <entry key="xr:Seller_contact_telephone_number" id="BT-42">Contact point phone</entry>
+  <entry key="xr:Seller_contact_telephone_number" id="BT-42">Contact point phone</entry> <!-- Phone -->
   <entry key="xr:Seller_contact_email_address" id="BT-43">Contact point email</entry> <!-- E-Mail address -->
   <entry key="xr:Invoice_number" id="BT-1">Invoice number</entry>
   <entry key="xr:Invoice_issue_date" id="BT-2">Invoice date</entry>
   <entry key="xr:Invoice_type_code" id="BT-3">Invoice type</entry>
   <entry key="xr:Invoice_currency_code" id="BT-5">Currency</entry>
   <entry key="xr:Project_reference" id="BT-11">Project reference</entry> <!-- Project number -->
-  <entry key="xr:Contract_reference" id="BT-12">Contract reference</entry>
+  <entry key="xr:Contract_reference" id="BT-12">Contract reference</entry> <!-- Contract number -->
   <entry key="xr:Purchase_order_reference" id="BT-13">Purchase order reference</entry> <!-- Order number -->
   <entry key="xr:Sales_order_reference" id="BT-14">Sales order reference</entry> <!-- Order number -->
   <!-- Be aware that these are for the whole invoice -->
@@ -132,7 +132,7 @@
   <entry key="xr:Deliver_to_city" id="BT-77">Location</entry>
   <entry key="xr:Deliver_to_country_subdivision" id="BT-79">State</entry>
   <entry key="xr:Deliver_to_country_code" id="BT-80">Country</entry> <!-- Country -->
-  <entry key="xr:Tender_or_lot_reference" id="BT -17">Award reference</entry>
+  <entry key="xr:Tender_or_lot_reference" id="BT-17">Award reference</entry> <!-- Contract number -->
   <entry key="xr:Receiving_advice_reference" id="BT-15">Receiving advice reference</entry>
   <entry key="xr:Despatch_advice_reference" id="BT-16">Despatch advice reference</entry>
   <entry key="xr:Business_process_type" id="BT-23">Process identifier</entry>
@@ -172,8 +172,8 @@
   <entry key="xr:Item_gross_price" id="BT-148">List price (net)</entry>
   <entry key="xr:Item_price_base_quantity" id="BT-149">Price unit</entry> <!-- Number of units -->
   <entry key="xr:Item_price_base_quantity_unit_of_measure" id="BT-150">Unit code</entry> <!-- Unit code -->
-  <entry key="xr:Invoiced_item_VAT_category_code" id="BT-151">VAT category</entry>
-  <entry key="xr:Invoiced_item_VAT_rate" id="BT-152">VAT rate (%)</entry>
+  <entry key="xr:Invoiced_item_VAT_category_code" id="BT-151">VAT category</entry> <!-- Value added tax -->
+  <entry key="xr:Invoiced_item_VAT_rate" id="BT-152">VAT rate (%)</entry> <!-- VAT rate in percent -->
   <entry key="xr:Item_name" id="BT-153">Name</entry>
   <entry key="xr:Item_description" id="BT-154">Description</entry>
   <entry key="xr:Item_Sellers_identifier" id="BT-155">Item identifier</entry> <!-- Item number -->
@@ -183,7 +183,7 @@
   <entry key="xr:Item_classification_identifier" id="BT-158">Item classification code</entry> <!-- Item classification code -->
   <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158_identifier">Item classification code scheme</entry>
   <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme">Version of the item classification code scheme
-    for creating the schema</entry>
+    for creating the schema</entry> <!-- Schema version -->
   <entry key="xr:Item_country_of_origin" id="BT-159">Country of origin</entry> <!-- VAT currency code -->
   <entry key="xr:Invoice_line_allowance_base_amount" id="BT-137">Base amount (net)</entry>
   <entry key="xr:Invoice_line_allowance_percentage" id="BT-138">Percentage</entry>
@@ -243,14 +243,6 @@
   <entry key="at-least-two-format">###,##0.#################</entry>
   <!-- New entries needed for HTML localization -->
   
-  <entry key="Summe aller Positionen">Total of all items</entry>
-  <entry key="Telefon">Phone</entry>
-  <entry key="Umsatzsteuer">Value added tax</entry>
-  <entry key="Umsatzsteuersatz in Prozent">VAT rate in percent</entry>
-  <entry key="Vergabenummer">Contract number</entry>
-  <entry key="Version zur Bildung des Schemas">Schema version</entry>
-  <entry key="Vertragsnummer">Contract number</entry>
-  <entry key="Vorausgegangene Rechnungen">Previous invoices</entry>
   <entry key="Wir übernehmen keine Haftung für die Richtigkeit der Daten">Wir übernehmen keine Haftung für die Richtigkeit der Daten</entry>
   <entry key="bis">to</entry>
   <entry key="brutto">gross</entry>
@@ -280,4 +272,6 @@
   <entry key="Preiseinzelheiten">Price details</entry>
   <entry key="Skonto; weitere Zahlungsbedingungen">Discount; other payment terms</entry>
   <entry key="Straße / Hausnummer">Street / House number</entry>
+  <entry key="Summe aller Positionen">Total of all items</entry> <!-- netto in extra Spalte? -->
+  <entry key="Vorausgegangene Rechnungen">Previous invoices</entry>
 </properties>
