wip: replace natural language keys

--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -36,7 +36,7 @@
   <entry key="xr:Sales_order_reference" id="BT-14">Auftragsreferenz</entry> <!-- Auftragsnummer -->
   <!-- Be aware that these are for the whole invoice -->
   <entry key="xr:Invoicing_period_start_date" id="BT-73">Von</entry>
-  <entry key="xr:Invoicing_period_end_date" id="BT-74">Bis</entry>
+  <entry key="xr:Invoicing_period_end_date" id="BT-74">Bis</entry> <!-- to -->
   <entry key="xr:Preceding_Invoice_reference" id="BT-25">Rechnungsnummer</entry>
   <entry key="xr:Preceding_Invoice_issue_date" id="BT-26">Rechnungsdatum</entry>
   <entry key="xr:Sum_of_Invoice_line_net_amount" id="BT-106">Nettosumme aller Positionen</entry>
@@ -152,7 +152,7 @@
   <entry key="xr:Supporting_document_description" id="BT-123">Beschreibung</entry>
   <entry key="xr:External_document_location" id="BT-124">Verweis (z.B. Internetadresse)</entry>
   <entry key="xr:Attached_document" id="BT-125">Anhangsdokument</entry>
-  <entry key="xr:Attached_document/@mime_code" id="BT-125_mime_code">MIME Code des Anhangdokuments</entry>
+  <entry key="xr:Attached_document/@mime_code" id="BT-125_mime_code">MIME Code des Anhangdokuments</entry> <!-- Format des Anhangdokuments -->
   <entry key="xr:Attached_document/@filename" id="BT-125_filename">Name des Anhangsdokuments</entry>
   <entry key="xrv:zeitstempel">Datum/Uhrzeit</entry>
   <entry key="xrv:betreff">Betreff</entry>
@@ -165,7 +165,7 @@
   <entry key="xr:Referenced_purchase_order_line_reference" id="BT-132">Bestellposition</entry> <!-- Nummer der Auftragsposition -->
   <entry key="xr:Invoice_line_Buyer_accounting_reference" id="BT-133">Kontierungsinformation</entry> <!-- Kontierungshinweis -->
   <entry key="xr:Invoice_line_period_start_date" id="BT-134">Von</entry>
-  <entry key="xr:Invoice_line_period_end_date" id="BT-135">Bis</entry>
+  <entry key="xr:Invoice_line_period_end_date" id="BT-135">Bis</entry> <!-- to -->
   <entry key="xr:Invoiced_quantity" id="BT-129">Menge</entry>
   <entry key="xr:Invoiced_quantity_unit_of_measure_code" id="BT-130">Einheit</entry>
   <entry key="xr:Item_net_price" id="BT-146">Preis pro Einheit (netto)</entry>
@@ -245,15 +245,10 @@
   <entry key="at-least-two-format">###.##0,#################</entry>
   <!-- New entries needed for HTML localization -->
   
-  <entry key="Wir übernehmen keine Haftung für die Richtigkeit der Daten">Wir übernehmen keine Haftung für die Richtigkeit der Daten</entry>
-  <entry key="bis">to</entry>
-  <entry key="brutto">gross</entry>
   <entry key="netto">net</entry>
   <entry key="von">from</entry>
   <entry key="Wir übernehmen keine Haftung für die Richtigkeit der Daten.">We assume no liability for the accuracy of the data.</entry>
   <entry key="Öffnen">Open</entry>  
-  <entry key="Format des Anhangdokuments">Attachment document format</entry>
-  <entry key="Nachlass auf Ebene der Rechnung">Invoice level discount</entry>
   <entry key="Nachlass">Discount</entry>
   <entry key="Grund für den Nachlass">Reason for the discount</entry>
   <entry key="Zuschlag auf Ebene der Rechnung">Invoice level surcharge</entry>
@@ -276,4 +271,7 @@
   <entry key="Straße / Hausnummer">Street / House number</entry>
   <entry key="Summe aller Positionen">Total of all items</entry> <!-- netto in extra Spalte? -->
   <entry key="Vorausgegangene Rechnungen">Previous invoices</entry>
+  <entry key="Wir übernehmen keine Haftung für die Richtigkeit der Daten">Wir übernehmen keine Haftung für die Richtigkeit der Daten</entry> <!-- mehrfach enthalten -->
+  <entry key="brutto">gross</entry> <!-- BT-112 xr:Invoice_total_amount_with_VAT "Gesamtbetrag brutto" -->
+  <entry key="Nachlass auf Ebene der Rechnung">Invoice level discount</entry>
 </properties>
