--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -61,7 +61,7 @@
   <entry key="xr:Document_level_allowance_percentage" id="BT-94">Percentage</entry>
   <entry key="xr:Document_level_allowance_amount" id="BT-92">Amount</entry>
   <entry key="xr:Document_level_allowance_VAT_rate" id="BT-96">Allowance VAT rate</entry>
-  <entry key="xr:Document_level_allowance_reason" id="BT-97">Allowance reason</entry>
+  <entry key="xr:Document_level_allowance_reason" id="BT-97">Allowance reason</entry> <!-- Reason for the discount -->
   <entry key="xr:Document_level_allowance_reason_code" id="BT-98">Allowance reason code</entry>
   <!-- Charges -->
   <entry key="xr:Document_level_charge_VAT_category_code" id="BT-102">Charge VAT category code</entry>
@@ -188,7 +188,7 @@
   <entry key="xr:Invoice_line_allowance_base_amount" id="BT-137">Base amount (net)</entry>
   <entry key="xr:Invoice_line_allowance_percentage" id="BT-138">Percentage</entry>
   <entry key="xr:Invoice_line_allowance_amount" id="BT-136">Allowance (net)</entry>
-  <entry key="xr:Invoice_line_allowance_reason" id="BT-139">Allowance reason</entry>
+  <entry key="xr:Invoice_line_allowance_reason" id="BT-139">Allowance reason</entry> <!-- Allowance reason -->
   <entry key="xr:Invoice_line_allowance_reason_code" id="BT-140">Allowance reason code</entry>
   <entry key="xr:Invoice_line_charge_base_amount" id="BT-142">Basic amount (net)</entry>
   <entry key="xr:Invoice_line_charge_percentage" id="BT-143">Percentage</entry>
@@ -247,11 +247,9 @@
   <entry key="von">from</entry>
   <entry key="Öffnen">Open</entry>  
   <entry key="Nachlass">Discount</entry>
-  <entry key="Grund für den Nachlass">Reason for the discount</entry>
   <entry key="Zuschlag auf Ebene der Rechnung">Invoice level surcharge</entry>
   <entry key="Zuschlag">Surcharge</entry>
   <entry key="Umsatzsteuersatz des Zuschlages">Umsatzsteuersatz des Zuschlages</entry>
-  <entry key="Grund des Nachlasses">Allowance reason</entry>
   <entry key="Code für den Nachlassgrund">Allowance reason code</entry>
   <entry key="Code für den Zuschlagsgrund">Surcharge reason code</entry>
   <entry key="Grund des Zuschlags">Reason for the surcharge</entry>
