--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -71,7 +71,7 @@
   <entry key="xr:Document_level_charge_base_amount" id="BT-100">Grundbetrag</entry>
   <entry key="xr:Document_level_charge_percentage" id="BT-101">Prozentsatz</entry>
   <entry key="xr:Document_level_charge_amount" id="BT-99">Zuschlagsbetrag</entry>
-  <entry key="xr:Document_level_charge_VAT_rate" id="BT-103">Umsatzsteuersatz des Zuschlags</entry>
+  <entry key="xr:Document_level_charge_VAT_rate" id="BT-103">Umsatzsteuersatz des Zuschlags</entry> <!-- <entry key="Umsatzsteuersatz des Zuschlages">Umsatzsteuersatz des Zuschlages</entry> -->
   <entry key="xr:Document_level_charge_reason" id="BT-104">Grund für den Zuschlag</entry>
   <entry key="xr:Document_level_charge_reason_code" id="BT-105">Kennung für den Zuschlagsgrund</entry>
   <entry key="xr:Payment_terms" id="BT-20">Zahlungsbedingungen</entry>
@@ -191,12 +191,12 @@
   <entry key="xr:Invoice_line_allowance_percentage" id="BT-138">Prozentsatz</entry>
   <entry key="xr:Invoice_line_allowance_amount" id="BT-136">Nachlass (netto)</entry>
   <entry key="xr:Invoice_line_allowance_reason" id="BT-139">Nachlassgrund</entry> <!-- <entry key="Grund des Nachlasses">Allowance reason</entry> -->
-  <entry key="xr:Invoice_line_allowance_reason_code" id="BT-140">Kennung des Nachlassgrunds</entry>
+  <entry key="xr:Invoice_line_allowance_reason_code" id="BT-140">Kennung des Nachlassgrunds</entry> <!-- <entry key="Code für den Nachlassgrund">Allowance reason code</entry> -->
   <entry key="xr:Invoice_line_charge_base_amount" id="BT-142">Grundbetrag (netto)</entry>
   <entry key="xr:Invoice_line_charge_percentage" id="BT-143">Prozentsatz</entry>
   <entry key="xr:Invoice_line_charge_amount" id="BT-141">Zuschlag (netto)</entry>
-  <entry key="xr:Invoice_line_charge_reason" id="BT-144">Zuschlagsgrund</entry>
-  <entry key="xr:Invoice_line_charge_reason_code" id="BT-145">Kennung des Zuschlagsgrunds</entry>
+  <entry key="xr:Invoice_line_charge_reason" id="BT-144">Zuschlagsgrund</entry> <!-- <entry key="Grund des Zuschlags">Reason for the surcharge</entry> -->
+  <entry key="xr:Invoice_line_charge_reason_code" id="BT-145">Kennung des Zuschlagsgrunds</entry> <!-- <entry key="Code für den Zuschlagsgrund">Surcharge reason code</entry> -->
   <entry key="uebersicht">Übersicht</entry>
   <entry key="uebersichtKaeufer" id="BG-7">Informationen zum Käufer</entry>
   <entry key="uebersichtVerkaeufer" id="BG-4">Informationen zum Verkäufer</entry>
@@ -244,19 +244,6 @@
   <entry key="percentage-format">##0,##</entry>
   <entry key="at-least-two-format">###.##0,#################</entry>
   <!-- New entries needed for HTML localization -->
-  
-  <entry key="netto">net</entry>
-  <entry key="von">from</entry>
-  <entry key="Öffnen">Open</entry>  
-  <entry key="Nachlass">Discount</entry>
-  <entry key="Zuschlag auf Ebene der Rechnung">Invoice level surcharge</entry>
-  <entry key="Zuschlag">Surcharge</entry>
-  <entry key="Umsatzsteuersatz des Zuschlages">Umsatzsteuersatz des Zuschlages</entry>
-  <entry key="Code für den Nachlassgrund">Allowance reason code</entry>
-  <entry key="Code für den Zuschlagsgrund">Surcharge reason code</entry>
-  <entry key="Grund des Zuschlags">Reason for the surcharge</entry>
-  
-  <!-- specify -->
   <entry key="Aufschlüsselung der Umsatzsteuer auf Ebene der Rechnung">Sales tax breakdown at invoice level</entry>
   <entry key="Bemerkung zur Rechnung">Note on the invoice</entry>
   <entry key="Betreff">Reference</entry>
@@ -271,4 +258,10 @@
   <entry key="Wir übernehmen keine Haftung für die Richtigkeit der Daten">Wir übernehmen keine Haftung für die Richtigkeit der Daten</entry> <!-- mehrfach enthalten -->
   <entry key="brutto">gross</entry> <!-- BT-112 xr:Invoice_total_amount_with_VAT "Gesamtbetrag brutto" -->
   <entry key="Nachlass auf Ebene der Rechnung">Invoice level discount</entry>
+  <entry key="Zuschlag auf Ebene der Rechnung">Invoice level surcharge</entry>
+  <entry key="Öffnen">Open</entry>  
+  <entry key="Nachlass">Discount</entry> <!-- xr:Document_level_allowance_amount ? -->
+  <entry key="Zuschlag">Surcharge</entry> <!-- xr:Document_level_charge_amount ? -->
+  <entry key="netto">net</entry>
+  <entry key="von">from</entry>
 </properties>
